created subscription form logic

--- a/index.html
+++ b/index.html
@@ -238,17 +238,17 @@
           <form action="">
             <div class="inputbox">
               <i class="fa-solid fa-user"></i>
-              <input type="name" name="" id="" required />
+              <input type="name" name="name" id="" required />
               <label for="">Name</label>
             </div>
             <div class="inputbox">
               <i class="fa-solid fa-envelope"></i>
-              <input type="email" required />
+              <input type="email" name="email" required />
               <label for="email">Email</label>
             </div>
             <div class="inputbox">
               <i class="fa-brands fa-whatsapp"></i>
-              <input type="tel" required />
+              <input type="tel" name="whatsapp" required />
               <label for="tel">Whatsapp</label>
             </div>
             <div>
