--- a/women-dresses.html
+++ b/women-dresses.html
@@ -131,7 +131,7 @@
           ------------------------------------------------------>
           <div class="card">
             <div class="card-left">
-              <img class="bigImg" src="images/women-dresses/product (1).jpg" />
+              <img class="bigImg" src="images/women-dresses/product (1).jpg" />z
             </div>
             <div class="card-right">
             <div id="zoomedDiv" >
