created some mistakes in success modal box

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -398,7 +398,7 @@
     <section id="modal-box">
       <i class="fa-solid fa-check"></i>
       <p>SUCCESS</p>
-      <span>Your data has been saved successfully !!!</span>
+      <span>Your order has been placed successfully !!!</span>
       <button>OK</button>
     </section>
     <!----------------------------------------------------
