fixed some errors of subscription form

--- a/index.html
+++ b/index.html
@@ -238,21 +238,21 @@
           <form action="">
             <div class="inputbox">
               <i class="fa-solid fa-user"></i>
-              <input type="name" name="name" id="" required />
+              <input autocomplete="off" type="name" name="name" id="" required />
               <label for="">Name</label>
             </div>
             <div class="inputbox">
               <i class="fa-solid fa-envelope"></i>
-              <input type="email" name="email" required />
+              <input autocomplete="off" type="email" name="email" required />
               <label for="email">Email</label>
             </div>
             <div class="inputbox">
               <i class="fa-brands fa-whatsapp"></i>
-              <input type="tel" name="whatsapp" required />
+              <input autocomplete="off" type="tel" name="whatsapp" required />
               <label for="tel">Whatsapp</label>
             </div>
             <div>
-              <button>SUBSCRIBE</button>
+              <button id="btn">SUBSCRIBE</button>
             </div>
           </form>
         </div>
