responsive home page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!------------------------------------------------------
          NAV START
     ------------------------------------------------------>
-    <nav>
+    <nav id="nav">
       <div class="nav-left">
         <a href="index.html"
           ><img src="images/logo.webp" alt="ROYAL THREAD" class="logo"
@@ -84,6 +84,7 @@
         <a class="button" href="#subscription">Contact Us</a>
       </div>
     </nav>
+    <i class="fa-solid fa-bars"></i>
     <!----------------------------------------------------
          NAV END
     ------------------------------------------------------>
