responsive home page

--- a/index.html
+++ b/index.html
@@ -239,7 +239,13 @@
           <form action="">
             <div class="inputbox">
               <i class="fa-solid fa-user"></i>
-              <input autocomplete="off" type="name" name="name" id="" required />
+              <input
+                autocomplete="off"
+                type="name"
+                name="name"
+                id=""
+                required
+              />
               <label for="">Name</label>
             </div>
             <div class="inputbox">
@@ -262,7 +268,7 @@
     <!------------------------------------------------------
          SUBSCRIPTION SECTION END
     ------------------------------------------------------>
-    
+
     <!------------------------------------------------------
          FOOTER SECTION START
     ------------------------------------------------------>
