add image in media query

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
          HEADER SECTION START
     ------------------------------------------------------>
     <section id="header">
+      <img src="images/logo.webp" alt="" />
       <h1>
         ROYAL
         <span style="background-color: #03a4ed; color: white; padding: 0px 10px"
