updat responsive in home page

--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
       </p>
       <h3>CONNECT WITH US</h3>
       <p>
-        We value the connection we have with our customers and invite you to
-        reach out to us with any questions, feedback, or special requests. We
-        love hearing from you and are committed to making your shopping
-        experience as enjoyable as possible.
+        We value the connection with our customers and invite you to reach out
+        to us with any questions, feedback, or special requests. We love hearing
+        from you and are committed to making your shopping experience as
+        enjoyable as possible.
       </p>
       <p>
         <br />
