created some changes in nav

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <li><a href="#header" class="home active">Home</a></li>
         <li><a href="#shop" class="shop">Shop</a></li>
         <li><a href="#about" class="aboutUs">About us</a></li>
-        <li><a href="" class="comments">Comments</a></li>
+        <li><a href="#abc" class="comments">Comments</a></li>
       </ul>
       <a class="button" href="#subscription">Contact Us</a>
     </div>
