--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!------------------------------------------------------
          NAV START
     ------------------------------------------------------>
-    <a href="#header"><i class="fa-solid fa-circle-up fa-bounce"></i></a>
+    <a href="#header"><i class="fa-solid fa-circle-up"></i></a>
   <div class="hamburger-container">
     <i class="fa-regular fa-circle-xmark"></i>
     <ul>
