women dress page filter responsived

--- a/index.html
+++ b/index.html
@@ -1,171 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta name="google-site-verification" content="hecwqYrSWskdU6foIhsOepCXrQd6_AG2spWVEAC_rOo" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ROYAL THREAD</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <!------------------------------------------------------
+  <head>
+    <meta
+      name="google-site-verification"
+      content="hecwqYrSWskdU6foIhsOepCXrQd6_AG2spWVEAC_rOo"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ROYAL THREAD</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <!------------------------------------------------------
          FAVICON START
     ------------------------------------------------------>
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
-  <link rel="manifest" href="favicon/site.webmanifest" />
-  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5" />
-  <meta name="msapplication-TileColor" content="#da532c" />
-  <meta name="theme-color" content="#ffffff" />
-  <!------------------------------------------------------
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <!------------------------------------------------------
          FAVICON END
     ------------------------------------------------------>
 
-  <!------------------------------------------------------
+    <!------------------------------------------------------
          FONT AWESOME CDN START
     ------------------------------------------------------>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-  <!------------------------------------------------------
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <!------------------------------------------------------
          FONT AWESOME CDN END 
     ------------------------------------------------------>
-  <!------------------------------------------------------
+    <!------------------------------------------------------
         GOOGLE FONT CDN END 
     ------------------------------------------------------>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
-  <!------------------------------------------------------
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!------------------------------------------------------
         GOOGLE FONT CDN END 
     ------------------------------------------------------>
-</head>
+  </head>
 
-<body>
-  <!------------------------------------------------------
+  <body>
+    <!------------------------------------------------------
          NAV START
     ------------------------------------------------------>
     <a href="#header"><i class="fa-solid fa-circle-up"></i></a>
-  <div class="hamburger-container">
-    <i class="fa-regular fa-circle-xmark"></i>
-    <ul>
-      <li><a href="#header">Home</a></li>
-      <li><a href="#shop">Shop</a></li>
-      <li><a href="#about">About Us</a></li>
-      <li><a href="">Comments</a></li>
-      <li><a href="#subscription">Contact Us</a></li>
-    </ul>
-  </div>
-  <nav id="nav">
-    <div class="nav-left">
-      <a href="index.html"><img src="images/logo.webp" alt="ROYAL THREAD" class="logo" /></a>
-    </div>
-    <div class="nav-right">
+    <div class="hamburger-container">
+      <i class="fa-regular fa-circle-xmark"></i>
       <ul>
-        <li><a href="#header" class="home active">Home</a></li>
-        <li><a href="#shop" class="shop">Shop</a></li>
-        <li><a href="#about" class="aboutUs">About us</a></li>
-        <li><a href="#abc" class="comments">Comments</a></li>
+        <li><a href="#header">Home</a></li>
+        <li><a href="#shop">Shop</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="">Comments</a></li>
+        <li><a href="#subscription">Contact Us</a></li>
       </ul>
-      <a class="button" href="#subscription">Contact Us</a>
     </div>
-  </nav>
-  <i class="fa-solid fa-bars"></i>
-  <!----------------------------------------------------
+    <nav id="nav">
+      <div class="nav-left">
+        <a href="index.html"
+          ><img src="images/logo.webp" alt="ROYAL THREAD" class="logo"
+        /></a>
+      </div>
+      <div class="nav-right">
+        <ul>
+          <li><a href="#header" class="home active">Home</a></li>
+          <li><a href="#shop" class="shop">Shop</a></li>
+          <li><a href="#about" class="aboutUs">About us</a></li>
+          <li><a href="#abc" class="comments">Comments</a></li>
+        </ul>
+        <a class="button" href="#subscription">Contact Us</a>
+      </div>
+    </nav>
+    <i class="fa-solid fa-bars"></i>
+    <!----------------------------------------------------
          NAV END
     ------------------------------------------------------>
 
-  <!------------------------------------------------------
+    <!------------------------------------------------------
          HEADER SECTION START
     ------------------------------------------------------>
-  <section id="header">
-    <img src="images/logo.webp" alt="" />
-    <h1>
-      ROYAL
-      <span style="background-color: #03a4ed; color: white; padding: 0px 10px">THREAD</span>
-      <h3>Fashion That Fits Your Life!</h3>
-    </h1>
-    <p class="typing"></p>
-    <!-- <p>Empower Your Wardrobe: Unleash Your Inner Confidence.</p>
+    <section id="header">
+      <img src="images/logo.webp" alt="" />
+      <h1>
+        ROYAL
+        <span style="background-color: #03a4ed; color: white; padding: 0px 10px"
+          >THREAD</span
+        >
+        <h3>Fashion That Fits Your Life!</h3>
+      </h1>
+      <p class="typing"></p>
+      <!-- <p>Empower Your Wardrobe: Unleash Your Inner Confidence.</p>
       <p>Fashioned for You, Inspired by Life.</p>
       <p>Discover the Art of Dressing: Your Fashion, Your Story.</p> -->
-    <a class="button" href="">SHOP NOW</a>
-  </section>
-  <!------------------------------------------------------
+      <a class="button" href="">SHOP NOW</a>
+    </section>
+    <!------------------------------------------------------
          HEADER SECTION END
     ------------------------------------------------------>
 
-  <!------------------------------------------------------
+    <!------------------------------------------------------
          POLICY SECTION START
     ------------------------------------------------------>
-  <section id="policy">
-    <h1>OUR SERVICES</h1>
-    <div class="card-div">
-      <div class="card">
-        <i class="fa-solid fa-check fa-bounce"></i>
-        <p>Quality Product</p>
+    <section id="policy">
+      <h1>OUR SERVICES</h1>
+      <div class="card-div">
+        <div class="card">
+          <i class="fa-solid fa-check fa-bounce"></i>
+          <p>Quality Product</p>
+        </div>
+        <div class="card">
+          <i class="fa-solid fa-truck-fast fa-bounce"></i>
+          <p>Free Shipping</p>
+        </div>
+        <div class="card">
+          <i class="fa-solid fa-arrow-right-arrow-left fa-bounce"></i>
+          <p>7-Day Return</p>
+        </div>
+        <div class="card">
+          <i class="fa-solid fa-phone-volume fa-bounce"></i>
+          <p>24/7 Support</p>
+        </div>
       </div>
-      <div class="card">
-        <i class="fa-solid fa-truck-fast fa-bounce"></i>
-        <p>Free Shipping</p>
-      </div>
-      <div class="card">
-        <i class="fa-solid fa-arrow-right-arrow-left fa-bounce"></i>
-        <p>7-Day Return</p>
-      </div>
-      <div class="card">
-        <i class="fa-solid fa-phone-volume fa-bounce"></i>
-        <p>24/7 Support</p>
-      </div>
-    </div>
-  </section>
-  <!------------------------------------------------------
+    </section>
+    <!------------------------------------------------------
          POLICY SECTION END
     ------------------------------------------------------>
 
-  <!------------------------------------------------------
+    <!------------------------------------------------------
          SHOP SECTION START
     ------------------------------------------------------>
-  <section id="shop">
-    <h1>SHOP</h1>
-    <div class="shop-div">
-      <div class="shop-card">
-        <h3>Women Dresses</h3>
-        <img src="images/women-dresses-collection.webp" alt="" />
-        <a href="women-dresses.html">SHOP NOW</a>
+    <section id="shop">
+      <h1>SHOP</h1>
+      <div class="shop-div">
+        <div class="shop-card">
+          <h3>Women Dresses</h3>
+          <img src="images/women-dresses-collection.webp" alt="" />
+          <a href="women-dresses.html">SHOP NOW</a>
+        </div>
+        <div class="shop-card">
+          <h3>Men Dresses</h3>
+          <img src="images/men-dresses-collection.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
+        <div class="shop-card">
+          <h3>Bags & Accessories</h3>
+          <img src="images/Bags & Accessories.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
+        <div class="shop-card">
+          <h3>Watches</h3>
+          <img src="images/Watches.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
+        <div class="shop-card">
+          <h3>Jewelry</h3>
+          <img src="images/Jewelry.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
+        <div class="shop-card">
+          <h3>Beauty & Fragrances</h3>
+          <img src="images/Beauty & Fragrances.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
       </div>
-      <div class="shop-card">
-        <h3>Men Dresses</h3>
-        <img src="images/men-dresses-collection.webp" alt="" />
-        <a href="">SHOP NOW</a>
-      </div>
-      <div class="shop-card">
-        <h3>Bags & Accessories</h3>
-        <img src="images/Bags & Accessories.webp" alt="" />
-        <a href="">SHOP NOW</a>
-      </div>
-      <div class="shop-card">
-        <h3>Watches</h3>
-        <img src="images/Watches.webp" alt="" />
-        <a href="">SHOP NOW</a>
-      </div>
-      <div class="shop-card">
-        <h3>Jewelry</h3>
-        <img src="images/Jewelry.webp" alt="" />
-        <a href="">SHOP NOW</a>
-      </div>
-      <div class="shop-card">
-        <h3>Beauty & Fragrances</h3>
-        <img src="images/Beauty & Fragrances.webp" alt="" />
-        <a href="">SHOP NOW</a>
-      </div>
-    </div>
-  </section>
-  <!------------------------------------------------------
+    </section>
+    <!------------------------------------------------------
          SHOP SECTION END
     ------------------------------------------------------>
 
-  <!------------------------------------------------------
+    <!------------------------------------------------------
          ABOUT US SECTION START
     ------------------------------------------------------>
     <section id="about">
@@ -215,85 +243,88 @@
     <!------------------------------------------------------
          ABOUT US SECTION END
     ------------------------------------------------------>
-  <!------------------------------------------------------
+    <!------------------------------------------------------
          SUBSCRIPTION SECTION START
     ------------------------------------------------------>
-  <section id="subscription">
-    <div class="form-box">
-      <div class="form-value">
-        <form action="">
-          <div class="inputbox">
-            <i class="fa-solid fa-user"></i>
-            <input autocomplete="off" type="name" name="name" id="" required />
-            <label for="">Name</label>
-          </div>
-          <div class="inputbox">
-            <i class="fa-solid fa-envelope"></i>
-            <input autocomplete="off" type="email" name="email" required />
-            <label for="email">Email</label>
-          </div>
-          <div class="inputbox">
-            <i class="fa-brands fa-whatsapp"></i>
-            <input autocomplete="off" type="tel" name="whatsapp" required />
-            <label for="tel">Whatsapp</label>
-          </div>
-          <div>
-            <button id="btn">SUBSCRIBE</button>
-          </div>
-        </form>
+    <section id="subscription">
+      <div class="form-box">
+        <div class="form-value">
+          <form action="">
+            <div class="inputbox">
+              <i class="fa-solid fa-user"></i>
+              <input
+                autocomplete="off"
+                type="name"
+                name="name"
+                id=""
+                required
+              />
+              <label for="">Name</label>
+            </div>
+            <div class="inputbox">
+              <i class="fa-solid fa-envelope"></i>
+              <input autocomplete="off" type="email" name="email" required />
+              <label for="email">Email</label>
+            </div>
+            <div class="inputbox">
+              <i class="fa-brands fa-whatsapp"></i>
+              <input autocomplete="off" type="tel" name="whatsapp" required />
+              <label for="tel">Whatsapp</label>
+            </div>
+            <div>
+              <button id="btn">SUBSCRIBE</button>
+            </div>
+          </form>
+        </div>
       </div>
-    </div>
-  </section>
-  <!------------------------------------------------------
+    </section>
+    <!------------------------------------------------------
          SUBSCRIPTION SECTION END
     ------------------------------------------------------>
 
-  <!------------------------------------------------------
+    <!------------------------------------------------------
          FOOTER SECTION START
     ------------------------------------------------------>
-  <section id="footer">
-    <div class="footer-services">
-      <a href="women-dresses.html">WOMEN DRESSES</a>
-      <a href="men-dresses.html">MEN DRESSES</a>
-      <a href="bags-&-accessories.html">BAGS & ACCESSORIES</a>
-      <a href="watches.html">WATCHES</a>
-      <a href="jewelary.htlm">JEWELRY</a>
-      <a href="bauty-&-fragrances.thml">BEAUTY & FRAGRANCES</a>
-    </div>
-    <h1>ROYAL THREAD</h1>
-    <p>
-      At Royal Thread, customer satisfaction is paramount. Our commitment to
-      exceptional quality, attention to detail, and impeccable customer
-      service ensures that every purchase is a delightful experience. We're
-      here to help you embrace your unique style and feel like royalty every
-      day.
-    </p>
-    <div class="social-icons">
-      <a href="">
-        <i class="fa-brands fa-facebook-f"></i>
-      </a>
-      <a href="">
-        <i class="fa-brands fa-whatsapp"></i>
-      </a>
-      <a href="">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a href="">
-        <i class="fa-brands fa-youtube"></i>
-      </a>
-      <a href="">
-        <i class="fa-brands fa-twitter"></i>
-      </a>
-    </div>
-    <span class="copy-right">© 2020 All Rights Reserved. Royal Thread</span>
-  </section>
-  <!------------------------------------------------------
+    <section id="footer">
+      <div class="footer-services">
+        <a href="women-dresses.html">WOMEN DRESSES</a>
+        <a href="men-dresses.html">MEN DRESSES</a>
+        <a href="bags-&-accessories.html">BAGS & ACCESSORIES</a>
+        <a href="watches.html">WATCHES</a>
+        <a href="jewelary.htlm">JEWELRY</a>
+        <a href="bauty-&-fragrances.thml">BEAUTY & FRAGRANCES</a>
+      </div>
+      <h1>ROYAL THREAD</h1>
+      <p>
+        At Royal Thread, customer satisfaction is paramount. Our commitment to
+        exceptional quality, attention to detail, and impeccable customer
+        service ensures that every purchase is a delightful experience. We're
+        here to help you embrace your unique style and feel like royalty every
+        day.
+      </p>
+      <div class="social-icons">
+        <a href="">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-whatsapp"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-youtube"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+      </div>
+      <span class="copy-right">© 2020 All Rights Reserved. Royal Thread</span>
+    </section>
+    <!------------------------------------------------------
          FOOTER SECTION END
     ------------------------------------------------------>
-  <script src="js/index.js"></script>
-</body>
-<script>
-  
-</script>
-
+    <script src="js/index.js"></script>
+  </body>
+  <script></script>
 </html>
