add close button in women dresses page

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -90,6 +90,7 @@
     ------------------------------------------------------->
     <section id="products-section">
       <div id="filter">
+        <i class="fa-regular fa-circle-xmark"></i>
         <h1>WOMEN DRESSES</h1>
         <div class="stuff-type">
           <h2>STUFF TYPE</h2>
