responsive women dresses page

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -143,8 +143,7 @@
             </div>
             <h3 class="product-name">MIXED</h3>
             <div>
-              <span>Product Code :</span
-              ><span id="product-card-code">SKU-LAWN-2468</span>
+              <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
             <div>
               <span>Size :</span
@@ -183,7 +182,7 @@
               >
             </div>
             <div>
-              <span>Selling Price:</span
+              <span>Total:</span
               ><span
                 ><span>PKR.</span
                 ><span id="product-card-total-amount"> 1600</span></span
@@ -203,7 +202,6 @@
         <!----------------------------------------------------
             PRODUCT CARD END
           ------------------------------------------------------>
-
         <!----------------------------------------------------
           PRODUCT CARD START
           ------------------------------------------------------>
@@ -220,8 +218,7 @@
             </div>
             <h3 class="product-name">MIXED</h3>
             <div>
-              <span>Product Code :</span
-              ><span id="product-card-code">SKU-LAWN-2468</span>
+              <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
             <div>
               <span>Size :</span
@@ -260,7 +257,7 @@
               >
             </div>
             <div>
-              <span>Selling Price:</span
+              <span>Total:</span
               ><span
                 ><span>PKR.</span
                 ><span id="product-card-total-amount"> 1600</span></span
