responsive women dressed page

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -88,6 +88,11 @@
     <!----------------------------------------------------
          PRODUCT SECTION STARTED
     ------------------------------------------------------->
+    <div class="responsive-header">
+      <i class="fa-solid fa-filter"></i>
+      <h1>WOMEN DRESSES</h1>
+      <i class="fa-solid fa-bars-staggered"></i>
+    </div>
     <section id="products-section">
       <div id="filter">
         <i class="fa-regular fa-circle-xmark"></i>
