created filter opening and closing logic

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <a class="button" href="#subscription">Contact Us</a>
       </div>
     </nav>
-    <i class="fa-solid fa-bars"></i>
+    <i class="fa-solid fa-bars-staggered"></i>
     <!----------------------------------------------------
          NAV END
     ------------------------------------------------------>
