responsive order form

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <div class="hamburger-container">
       <i class="fa-regular fa-circle-xmark"></i>
       <ul>
-        <li><a href="index.html #header">Home</a></li>
-        <li><a href="index.html#shop">Shop</a></li>
-        <li><a href="index.html#about">About Us</a></li>
+        <li><a href="#header">Home</a></li>
+        <li><a href="#shop">Shop</a></li>
+        <li><a href="#about">About Us</a></li>
         <li><a href="">Comments</a></li>
-        <li><a href="index.html#subscription">Contact Us</a></li>
+        <li><a href="#subscription">Contact Us</a></li>
       </ul>
     </div>
     <nav id="nav">
