--- a/women-dresses.html
+++ b/women-dresses.html
@@ -68,11 +68,11 @@
     <div class="hamburger-container">
       <i class="fa-regular fa-circle-xmark"></i>
       <ul>
-        <li><a href="#header">Home</a></li>
-        <li><a href="#shop">Shop</a></li>
-        <li><a href="#about">About Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#shop">Shop</a></li>
+        <li><a href="index.html#about">About Us</a></li>
         <li><a href="">Comments</a></li>
-        <li><a href="#subscription">Contact Us</a></li>
+        <li><a href="index.html#subscription">Contact Us</a></li>
       </ul>
     </div>
     <nav>
@@ -601,7 +601,7 @@
     <!----------------------------------------------------
          ORDER FORM START
     ------------------------------------------------------->
-    <section id="order-form" style="display: none">
+    <section id="order-form">
       <form id="form" action="POST" class="form-main-div">
         <i class="fa-solid fa-xmark"></i>
         <div class="form-left-div">
