fixed some error

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -601,7 +601,7 @@
     <!----------------------------------------------------
          ORDER FORM START
     ------------------------------------------------------->
-    <section id="order-form">
+    <section id="order-form" style="display: none">
       <form id="form" action="POST" class="form-main-div">
         <i class="fa-solid fa-xmark"></i>
         <div class="form-left-div">
