updated responsive in women dresses page

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -3605,7 +3605,7 @@
       <form id="form" action="POST" class="form-main-div">
         <i class="fa-solid fa-xmark"></i>
         <div class="form-left-div">
-          <h4>CUSTOMER'S ORDER DETAILS</h4>
+          <h4>CUSTOMER DETAILS</h4>
           <div class="form">
             <label for="">ORDER NO :</label>
             <input
