fix subscription form responsive in home page

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <!-- <p>Empower Your Wardrobe: Unleash Your Inner Confidence.</p>
       <p>Fashioned for You, Inspired by Life.</p>
       <p>Discover the Art of Dressing: Your Fashion, Your Story.</p> -->
-      <a class="button" href="">SHOP NOW</a>
+      <a class="button" href="#shop">SHOP NOW</a>
     </section>
     <!------------------------------------------------------
          HEADER SECTION END
