fix sime error in card in women dresses page

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -231,7 +231,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">LAWN 03 PIECE STICHED</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -306,7 +306,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">LAWN 02 PIECE STICHED</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -381,7 +381,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">LAWN 03 PIECE UN-STICHED</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -456,7 +456,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">LAWN 02 PIECE UN-STICHED</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -531,7 +531,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">COTTON 03 PIECE STICHED</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -606,7 +606,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">COTTON 02 PIECE STICHED</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -681,7 +681,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">COTTON 03 PIECE UN-STICHED</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -756,7 +756,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">COTTON 02 PIECE UN-STICHED</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -831,7 +831,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">BOTTOM</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -906,7 +906,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">BOTTOM</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -981,7 +981,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">KURTI</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -1056,7 +1056,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">KURTI</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
@@ -1131,7 +1131,7 @@
                 alt="Zoomed Image"
               />
             </div>
-            <h3 class="product-name">MIXED</h3>
+            <h3 class="product-name">KURTI</h3>
             <div>
               <span>SKU :</span><span id="product-card-code">WDC-2468</span>
             </div>
